Correction body overflowing + Zoom on partner card

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -53,8 +53,11 @@ html {
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
 */
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
   /* 1 */
   line-height: inherit;
   /* 2 */
@@ -507,6 +510,7 @@ h3 {
   --tw-rotate: 135deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+
 
 .container {
   
@@ -1126,37 +1130,6 @@ h3 {
     var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.transition-\[top\] {
-  transition-property: top;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition {
-  transition-property: color, background-color, border-color, fill, stroke,
-    opacity, box-shadow, transform, filter, -webkit-text-decoration-color,
-    -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color,
-    fill, stroke, opacity, box-shadow, transform, filter,
-    -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
-    backdrop-filter;
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
-    backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
-}
-
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 body {
   font-family: "Inter", sans-serif;
 }
@@ -1244,35 +1217,6 @@ input#checkboxLabel:checked ~ .box span {
   opacity: 1;
 }
 
-.dark .dark\:shadow-signUp {
-  --tw-shadow: 0px 5px 10px rgba(4, 10, 34, 0.2);
-  --tw-shadow-colored: 0px 5px 10px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-
-  .lg\:shadow-none {
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .lg\:shadow-lg {
-    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
-      0 4px 6px -4px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
-      0 4px 6px -4px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .lg\:after\:right-0::after {
-    content: var(--tw-content);
-    right: 0px;
-  }
-
   .group:hover .lg\:group-hover\:visible {
     visibility: visible;
   }
@@ -1281,9 +1225,9 @@ input#checkboxLabel:checked ~ .box span {
     top: 100%;
   }
 
-  .grid {
+  #gallery.grid {
     max-width: 1440px;
-    width:80%;
+    width:100%;
     height: auto;
     margin: 2rem auto;
     display: grid;
@@ -1292,7 +1236,16 @@ input#checkboxLabel:checked ~ .box span {
     grid-gap:16px
   }
 
-  .gridItem {
+  #gallery.grid.gridItem {
     max-width: 9rem;
     max-height: 12rem;
+  }
+
+  .zoom {
+    max-width: 320px;
+  }
+  .zoom:hover {
+   transform: scale(1.25);
+   transition-duration: 300ms;
+   max-width: 360px;
   }
